<resources>
    <string name="app_name">Pesantren App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pesantren_logo">Pesantren Logo</string>
    <string name="pondok_pesantren_ash_shomadiyah_komplek_tengah">Pondok Pesantren Ash-Shomadiyah Komplek Tengah</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="background_top">Background Top</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="assalamualaikum">Assalamualaikum,</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="syahriah">SYAHRIAH</string>
    <string name="buku_kas">BUKU KAS</string>
    <string name="profil">PROFIL</string>
    <string name="password2">PASSWORD</string>
    <string name="photo">Photo</string>
    <string name="nama">Nama</string>
    <string name="null_value">-</string>
    <string name="alamat">Alamat</string>
    <string name="no_hp">No. Hp</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="alamat_asal_sekolah">Alamat Asal Sekolah</string>
    <string name="sekolah_sekarang">Sekolah Sekarang</string>
    <string name="alamat_sekolah_sekarang">Alamat Sekolah Sekarang</string>
    <string name="nama_ayah">Nama Ayah</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="no_hp_orang_tua">No. Hp Orang Tua</string>
    <string name="pekerjaan_ayah">Pekerjaan Ayah</string>
    <string name="pekerjaan_ibu">Pekerjaan Ibu</string>
    <string name="tahun_masuk">Tahun Masuk</string>
    <string name="tahun_keluar">Tahun Keluar</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string name="simpan">Simpan</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="no_hp_santri">No. HP Santri</string>
    <string name="logout">Logout</string>
    <string name="camera_button">Camera button</string>
    <string name="cash_image">Cash Image</string>
    <string name="rp_0">Rp. 0</string>
    <string name="saldo">Saldo:</string>
    <string name="search">Search</string>
    <string name="title_activity_syahriah">MainActivity</string>
    <string name="title_spp">SPP</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="bulan">Bulan</string>
    <string name="januari">Januari</string>
    <string name="februari">Februari</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="mei">Mei</string>
    <string name="juni">Juni</string>
    <string name="juli">Juli</string>
    <string name="agustus">Agustus</string>
    <string name="september">September</string>
    <string name="oktober">Oktober</string>
    <string name="november">November</string>
    <string name="desember">Desember</string>
    <string name="tanggal_bayar">Tanggal Bayar</string>
    <string name="biaya">Biaya</string>
    <string name="cari_berdasarkan_tahun">Cari berdasarkan Tahun</string>
    <string name="version_1_0_0">Version 1.0.0</string>
</resources>