<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/profile_placeholder"
                android:layout_gravity="bottom|center_horizontal" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:focusable="true"
                android:contentDescription="@string/camera_button"
                app:tint="@android:color/white"
                app:elevation="6dp" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textMultiLine"
                android:lines="3"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:hint="@string/alamat"
                android:maxLines="1"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_hp_santri"
                android:inputType="phone"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_birth_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_birth_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tempat_lahir"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="date"
                    android:maxLines="1"
                    android:backgroundTint="@color/white"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_date"
                android:layout_width="55dp"
                android:layout_height="67dp"
                android:drawableEnd="@drawable/ic_baseline_date_range_24"
                android:textSize="24sp"
                android:layout_marginTop="12dp"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_school_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_school_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/asal_sekolah"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_school_address_old"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_school_address_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textMultiLine"
                android:lines="3"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:hint="@string/alamat_asal_sekolah"
                android:maxLines="1"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_school_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="@+id/til_school_address_old"
            app:layout_constraintStart_toStartOf="@+id/til_school_address_old"
            app:layout_constraintTop_toBottomOf="@+id/til_school_address_old">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_school_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sekolah_sekarang"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_school_address_current"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_school_address_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textMultiLine"
                android:lines="3"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:hint="@string/alamat_sekolah_sekarang"
                android:maxLines="1"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_father_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_ayah"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mother_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mother_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_ibu"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_father_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_father_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pekerjaan_ayah"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mother_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mother_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pekerjaan_ibu"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_parent_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_parent_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_hp_orang_tua"
                android:inputType="phone"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_entry_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_entry_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tahun_masuk"
                android:inputType="number"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_year_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_year_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tahun_keluar"
                android:inputType="number"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/simpan"
            android:textSize="16sp"
            android:layout_marginTop="32dp"/>

    </LinearLayout>

</ScrollView>