<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_3"
    android:id="@+id/swipeRefresh"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/background_top"
                android:layout_width="0dp"
                android:layout_height="270dp"
                android:contentDescription="@string/background_top"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_background_top" />

            <TextView
                android:id="@+id/salam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/assalamualaikum"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/selamat_datang"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salam" />

            <TextView
                android:id="@+id/pesantren_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="24dp"
                android:text="@string/pondok_pesantren_ash_shomadiyah_komplek_tengah"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_round_white"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pesantren_name">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/profile_placeholder" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@id/iv_photo"
                    android:text="@string/name"
                    android:textColor="@color/black_1"
                    android:textSize="22sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/iv_photo"
                    android:text="@string/email_address"
                    android:textColor="@color/black_1"
                    android:textSize="16sp" />

            </RelativeLayout>

            <!-- Data Syahriah -->
            <RelativeLayout
                android:id="@+id/rv_syahriah"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/ic_round_white"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/syahriah"
                    android:textColor="@color/black_1"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/syahriah"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />

            </RelativeLayout>

            <!-- Buku Kas -->
            <RelativeLayout
                android:id="@+id/rv_buku_kas"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/ic_round_white"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView5"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/buku_kas"
                    android:textColor="@color/black_1"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/buku_kas"
                    app:srcCompat="@drawable/ic_baseline_library_books_24" />

            </RelativeLayout>

            <!-- Data Profil -->
            <RelativeLayout
                android:id="@+id/rv_profile"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/ic_round_white"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_syahriah">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView6"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/profil"
                    android:textColor="@color/black_1"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/profil"
                    app:srcCompat="@drawable/ic_baseline_person_24" />

            </RelativeLayout>

            <!-- Password -->
            <RelativeLayout
                android:id="@+id/rv_pass"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/ic_round_white"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_buku_kas">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView8"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/password2"
                    android:textColor="@color/black_1"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/buku_kas"
                    app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>